--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=assessment
 
 # Postgres config
 spring.jpa.show-sql=true
+spring.jpa.open-in-view=true
 spring.jpa.hibernate.ddl-auto=update
 
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/accenture_assessment
 spring.datasource.username=postgres
