--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,12 +21,14 @@
     "@tailwindcss/vite": "^4.1.12",
     "axios": "^1.11.0",
     "pinia": "^3.0.3",
+    "primeicons": "^7.0.0",
     "primevue": "^4.3.8",
     "tailwindcss": "^4.1.12",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@primevue/auto-import-resolver": "^4.3.8",
     "@tsconfig/node22": "^22.0.2",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.16.5",
@@ -43,6 +45,7 @@
     "npm-run-all2": "^8.0.4",
     "prettier": "3.6.2",
     "typescript": "~5.8.0",
+    "unplugin-vue-components": "^29.0.0",
     "vite": "^7.0.6",
     "vite-plugin-vue-devtools": "^8.0.0",
     "vitest": "^3.2.4",
