--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,14 +18,17 @@
   },
   "dependencies": {
     "@primeuix/themes": "^1.2.3",
+    "@primevue/forms": "^4.3.8",
     "@tailwindcss/vite": "^4.1.12",
     "axios": "^1.11.0",
+    "dayjs": "^1.11.18",
     "pinia": "^3.0.3",
     "primeicons": "^7.0.0",
     "primevue": "^4.3.8",
     "tailwindcss": "^4.1.12",
     "vue": "^3.5.18",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "zod": "^4.1.5"
   },
   "devDependencies": {
     "@primevue/auto-import-resolver": "^4.3.8",
