--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -11,10 +11,11 @@
   ],
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
+    "strict": true,
     "paths": {
       "@/*": [
         "./src/*"
       ]
     }
-  }
+  },
 }
